[package]
name = "host"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
rand = { version = "0.10.0", features = ["std", "thread_rng"] }
russh = "0.60.0"
russh-keys = "0.49.2"
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["full"]}
wasmtime = "43.0.0"
